2004-07-31  Hans Breuer  <hans@breuer.org>
	* app/display/makefile.msc app/widgets/makefile.msc : build
	but *dont link* display-enums.obj, widget-enums.obj and
	gimpdisplayoptions.obj. They must be in the dll
	* app/makefile.msc : build gimp.exe and gimp-console.exe both
	using the same gimp-core.dll
	* app/gimpcore.def : new file, exports for gimp-core.dll
	* app/Makefile.am : added to EXTRA_DIST

	* cursors/makefile.msc : new file to create gimp-tool-cursors.h
	* cursors/Makefile.am : added to EXTRA_DIST

	* **/makefile.msc : updated

	* app/main.c app/app_procs.c : moved code to close the console
	from the former to the later. It only is to be used if The Gimp
	is not build as console app.

	* plug-ins/gfig/gfig.c : dont gimp_drawable_detach() the same
	drawable twice
	* plug-ins/gfig-dialog.c() : added a g_return_if_fail() to avoid
	crashing on File/Import


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14283 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/core/makefile.msc
+++ b/app/core/makefile.msc
@@ -36,7 +36,9 @@ OBJECTS = \
 	cpercep.obj \
 	gimp.obj \
 	gimp-edit.obj \
+	gimp-gui.obj \
 	gimp-units.obj \
+	gimparea.obj \
 	gimpbrush.obj \
 	gimpbrushgenerated.obj \
 	gimpbrushpipe.obj \
@@ -66,6 +68,8 @@ OBJECTS = \
 	gimpdrawable-transform.obj \
 	gimpenvirontable.obj \
 	gimpgradient.obj \
+	gimpgradient-load.obj \
+	gimpgradient-save.obj \
 	gimpgrid.obj \
 	gimp-gradients.obj \
 	gimpimage.obj \
@@ -83,7 +87,6 @@ OBJECTS = \
 	gimpimage-new.obj \
 	gimpimage-pick-color.obj \
 	gimpimage-preview.obj \
-	gimpimage-projection.obj \
 	gimpimage-qmask.obj \
 	gimpimage-resize.obj \
 	gimpimage-rotate.obj \
@@ -100,6 +103,8 @@ OBJECTS = \
 	gimplayer-floating-sel.obj \
 	gimplayermask.obj \
 	gimplist.obj \
+	gimpprojection.obj \
+	gimpprojection-construct.obj \
 	gimpmarshal.obj \
 	gimp-modules.obj \
 	gimpobject.obj \
@@ -109,6 +114,7 @@ OBJECTS = \
 	gimp-parasites.obj \
 	gimpparasitelist.obj \
 	gimppattern.obj \
+	gimppickable.obj \
 	gimppreviewcache.obj \
 	gimpscanconvert.obj \
 	gimpselection.obj \
