--- a/libgimpcolor/makefile.msc
+++ b/libgimpcolor/makefile.msc
@@ -36,7 +36,8 @@ OBJECTS = \
 	gimpcmyk.obj \
 	gimpcolorspace.obj \
 	gimphsv.obj \
-	gimprgb.obj
+	gimprgb.obj \
+	gimprgb-parse.obj \
 
 gimpcolor-$(GIMP_VER).dll : $(OBJECTS) gimpcolor.def
 	$(CC) $(CFLAGS) -LD -Fegimpcolor-$(GIMP_VER).dll $(OBJECTS) $(DEPLIBS) $(LDFLAGS) user32.lib /def:gimpcolor.def
