--- a/libgimpbase/makefile.msc
+++ b/libgimpbase/makefile.msc
@@ -27,16 +27,20 @@ PKG_LINK = \
 	$(GLIB_LIBS) $(INTL_LIBS)
 
 OBJECTS = \
+	gimpbaseenums.obj \
 	gimpbase-private.obj \
-	gimpenv.obj \
+	gimpbasetypes.obj \
 	gimpdatafiles.obj \
-	gimpsignal.obj \
+	gimpenv.obj \
+	gimpmemsize.obj \
 	gimpparasite.obj \
 	gimpparasiteio.obj \
 	gimpprotocol.obj \
+	gimpsignal.obj \
 	gimpunit.obj \
 	gimputils.obj \
 	gimpwire.obj \
+
 
 EXTRA_DIST = \
 	makefile.mingw \
@@ -70,7 +74,7 @@ $(PACKAGE).lib : $(OBJECTS)
 	lib /out:$(PACKAGE).lib $(OBJECTS)
 
 $(PACKAGE)-$(PKG_VER).dll : $(OBJECTS) $(PACKAGE).def
-	$(CC) $(CFLAGS) -LD -Felib$(PACKAGE)-$(PKG_VER).dll $(OBJECTS) $(PKG_LINK) user32.lib advapi32.lib wsock32.lib $(LDFLAGS) /def:$(PACKAGE).def
+	$(CC) $(CFLAGS) -LD -Fe$(PACKAGE)-$(PKG_VER).dll $(OBJECTS) $(PKG_LINK) user32.lib advapi32.lib wsock32.lib $(LDFLAGS) /def:$(PACKAGE).def
 
 $(PACKAGE).exe : $(OBJECTS) $(PACKAGE).def $(PACKAGE).res
 	$(CC) $(CFLAGS) -Fe$(PACKAGE).exe $(PACKAGE).res $(OBJECTS) $(PKG_LINK) \
