--- a/modules/makefile.msc
+++ b/modules/makefile.msc
@@ -21,7 +21,6 @@ DEPLIBS = $(INTL_LIBS) $(GLIB_LIBS) $(GTK2_LIBS)
 BIN = $(GIMP)\modules
 
 MODULES = \
-#	colorsel_gtk-$(GIMP_VER).dll \
 	colorsel_triangle-$(GIMP_VER).dll \
 	colorsel_water-$(GIMP_VER).dll \
 	colorsel_cmyk-$(GIMP_VER).dll \
@@ -39,15 +38,8 @@ install : all
 ..\config.h : ..\config.h.win32
 	copy ..\config.h.win32 ..\config.h
 
-colorsel_gtk-$(GIMP_VER).dll : colorsel_gtk.obj
-	$(CC) $(CFLAGS) -LD -Fe$@ colorsel_gtk.obj $(LDFLAGS) \
-	..\app\gimp.lib \
-	..\libgimpcolor\gimpcolor-$(GIMP_VER).lib \
-	$(DEPLIBS)
-
 colorsel_triangle-$(GIMP_VER).dll : colorsel_triangle.obj
 	$(CC) $(CFLAGS) -LD -Fe$@ colorsel_triangle.obj $(LDFLAGS) \
-	..\app\gimp.lib \
 	..\libgimpcolor\gimpcolor-$(GIMP_VER).lib \
 	..\libgimpwidgets\gimpwidgets-$(GIMP_VER).lib \
 	..\libgimpmodule\gimpmodule-$(GIMP_VER).lib \
@@ -55,32 +47,31 @@ colorsel_triangle-$(GIMP_VER).dll : colorsel_triangle.obj
 
 colorsel_water-$(GIMP_VER).dll : colorsel_water.obj
 	$(CC) $(CFLAGS) -LD -Fe$@ colorsel_water.obj $(LDFLAGS) \
-	..\app\gimp.lib \
 	..\libgimpcolor\gimpcolor-$(GIMP_VER).lib \
 	..\libgimpwidgets\gimpwidgets-$(GIMP_VER).lib \
 	$(DEPLIBS)
 
 colorsel_cmyk-$(GIMP_VER).dll : colorsel_cmyk.obj
 	$(CC) $(CFLAGS) -LD -Fe$@ colorsel_cmyk.obj $(LDFLAGS) \
-	..\app\gimp.lib \
 	..\libgimpcolor\gimpcolor-$(GIMP_VER).lib \
 	..\libgimpwidgets\gimpwidgets-$(GIMP_VER).lib \
 	$(DEPLIBS)
 
 cdisplay_colorblind-$(GIMP_VER).dll : cdisplay_colorblind.obj
-	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_colorblind.obj $(LDFLAGS) ..\app\gimp.lib \
+	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_colorblind.obj $(LDFLAGS) \
 	..\libgimpbase\gimpbase-$(GIMP_VER).lib \
 	..\libgimpwidgets\gimpwidgets-$(GIMP_VER).lib \
+	..\libgimpmodule\gimpmodule-$(GIMP_VER).lib \
 	$(DEPLIBS)
 
 cdisplay_gamma-$(GIMP_VER).dll : cdisplay_gamma.obj
-	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_gamma.obj $(LDFLAGS) ..\app\gimp.lib \
+	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_gamma.obj $(LDFLAGS) \
 	..\libgimpbase\gimpbase-$(GIMP_VER).lib \
 	..\libgimpwidgets\gimpwidgets-$(GIMP_VER).lib \
 	$(DEPLIBS)
 
 cdisplay_highcontrast-$(GIMP_VER).dll : cdisplay_highcontrast.obj
-	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_highcontrast.obj $(LDFLAGS) ..\app\gimp.lib \
+	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_highcontrast.obj $(LDFLAGS) \
 	..\libgimpbase\gimpbase-$(GIMP_VER).lib \
 	..\libgimpwidgets\gimpwidgets-$(GIMP_VER).lib \
 	$(DEPLIBS)
