2004-08-04  Manish Singh  <yosh@gimp.org>
        * configure.in: Really really really really fix WINDRES logic.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14304 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -242,11 +242,11 @@ AC_SUBST(PATHSEP)
 AM_CONDITIONAL(OS_WIN32, test "$os_win32" = "yes")
 AM_CONDITIONAL(OS_UNIX, test "$os_win32" != "yes")
 
-WINDRES=":"
-
 if test "$os_win32" = "yes"; then
   AC_CHECK_PROG(ms_librarian, lib.exe, yes, no)
   AC_CHECK_TOOL(WINDRES, windres, :)
+else
+  WINDRES=":"
 fi
 
 AM_CONDITIONAL(MS_LIB_AVAILABLE, test x$ms_librarian = xyes)
