2004-08-08  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am: do not build test-preview-area by
	default, put it into EXTRA_PROGRAMS. Fixes parallel builds.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14358 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -219,7 +219,7 @@ $(srcdir)/gimpwidgetsmarshal.c: $(srcdir)/gimpwidgetsmarshal.h
 # test programs, not to be built by default and never installed
 #
 
-noinst_PROGRAMS = test-preview-area
+EXTRA_PROGRAMS = test-preview-area
 
 test_preview_area_SOURCES = test-preview-area.c 
 
