2004-08-09  Hans Breuer  <hans@breuer.org>
	* app/core/gimp-edit.c(gimp_edit_paste_as_new) :
	gimp_create_display() with the right parameters order

	* app/widgets/gimpwidgets-utils.c (gimp_message_box_set_icons)
	handle gtk_style_lookup_icon_set() returnig NULL

	* app/gimpcore.def app/widgets/makefile.msc
	  themes/default/images/makefile.msc : updated


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14372 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/makefile.msc
+++ b/app/widgets/makefile.msc
@@ -30,6 +30,7 @@ OBJECTS = \
 	gimpactionfactory.obj \
 	gimpactiongroup.obj \
 	gimpactionview.obj \
+	gimpblobeditor.obj \
 	gimpbrusheditor.obj \
 	gimpbrushfactoryview.obj \
 	gimpbrushselect.obj \
@@ -165,6 +166,7 @@ DEFINES = \
 all : \
 	$(PRJ_TOP)\config.h \
 	$(PACKAGE).lib \
+	widgets-enums.obj \
 !IFDEF DLLGIMP
 	$(PACKAGE)-$(PKG_VER).dll
 !ENDIF
