2004-08-09  Sven Neumann  <sven@gimp.org>
	* data/misc/gimp.desktop.in.in: added GenericName and Version,
	updated Categories.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14375 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/data/misc/gimp.desktop.in.in
+++ b/data/misc/gimp.desktop.in.in
@@ -1,13 +1,15 @@
 [Desktop Entry]
+Version=1.0
 Encoding=UTF-8
+Type=Application
 _Name=The GIMP
+_GenericName=Image Editor
 _Comment=Create and edit images or photographs
 Exec=gimp-remote-@GIMP_APP_VERSION@ %U
 TryExec=gimp-@GIMP_APP_VERSION@
 Icon=@gimpdatadir@/images/@GIMP_DESKTOP_ICON@
 Terminal=false
-Type=Application
-Categories=Application;Graphics;RasterGraphics;
+Categories=Application;Graphics;2DGraphics;RasterGraphics;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=GIMP
 StartupNotify=true
