2004-08-11  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/cartoon.c
	* plug-ins/common/neon.c
	* plug-ins/common/photocopy.c
	* plug-ins/common/softglow.c: added four new plug-ins contributed
	by Spencer Kimball. Ported them from 1.2 to 2.1 APIs.

	* plug-ins/common/plugin-defs.pl: added them here.

	* plug-ins/common/mkgen.pl: removed tab insanity now that
	libgimpoldpreview is gimp.

	* plug-ins/common/.cvsignore
	* plug-ins/common/Makefile.am: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14407 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/.cvsignore
+++ b/plug-ins/common/.cvsignore
@@ -18,6 +18,7 @@ borderaverage
 bumpmap
 bz2
 c_astretch
+cartoon
 ccanalyze
 channel_mixer
 checkerboard
@@ -74,6 +75,7 @@ max_rgb
 mblur
 mng
 mosaic
+neon
 newsprint
 nlfilt
 noisify
@@ -83,6 +85,7 @@ oilify
 papertile
 pat
 pcx
+photocopy
 pix
 pixelize
 plasma
@@ -108,6 +111,7 @@ sinus
 smooth_palette
 snoise
 sobel
+softglow
 sparkle
 spheredesigner
 spread
