2004-08-14  Sven Neumann  <sven@gimp.org>
	* plug-ins/help/help.[ch]: moved some defines to the header file.

	* plug-ins/help/domain.c: trivial change to remove the libgimpbase
	dependency.

	* plug-ins/help/Makefile.am
	* plug-ins/help/gimp-help-lookup.c: added a very simple
	command-line tool that allows to lookup a help-id.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14419 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/help/Makefile.am
+++ b/plug-ins/help/Makefile.am
@@ -7,6 +7,8 @@ if OS_WIN32
 mwindows = -mwindows
 endif
 
+AM_CPPFLAGS = -DDATADIR=\""$(gimpdatadir)"\"
+
 AM_LDFLAGS = $(mwindows)
 
 libexecdir = $(gimpplugindir)/plug-ins
@@ -32,3 +34,14 @@ LDADD = \
 	$(GLIB_LIBS)		\
 	$(RT_LIBS)		\
 	$(INTLLIBS)
+
+
+noinst_PROGRAMS = gimp-help-lookup
+
+gimp_help_lookup_SOURCES = \
+	domain.c	\
+	domain.h	\
+	locales.c	\
+	locales.h	\
+	help.h		\
+	gimp-help-lookup.c
