2004-08-14  Sven Neumann  <sven@gimp.org>
	* plug-ins/help/Makefile.am: no need to link gimp-help-lookup with
	any GIMP libraries.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14423 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/help/Makefile.am
+++ b/plug-ins/help/Makefile.am
@@ -24,15 +24,15 @@ help_SOURCES = \
 	help.h
 
 INCLUDES = \
-	-I$(top_srcdir)		\
-	$(GLIB_CFLAGS)		\
+	-I$(top_srcdir)	\
+	$(GLIB_CFLAGS)	\
 	-I$(includedir)
 
 LDADD = \
-	$(libgimp)		\
-	$(libgimpbase)		\
-	$(GLIB_LIBS)		\
-	$(RT_LIBS)		\
+	$(libgimp)	\
+	$(libgimpbase)	\
+	$(GLIB_LIBS)	\
+	$(RT_LIBS)	\
 	$(INTLLIBS)
 
 
@@ -45,3 +45,5 @@ gimp_help_lookup_SOURCES = \
 	locales.h	\
 	help.h		\
 	gimp-help-lookup.c
+
+gimp_help_lookup_LDADD = $(GLIB_LIBS)
