2004-08-24  Sven Neumann  <sven@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpmessagebox.[ch]: added new widget GimpMessageBox.

	* app/widgets/gimpwidgets-utils.c: use it for message dialogs.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14468 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -170,6 +170,8 @@ libappwidgets_a_sources = \
 	gimplayertreeview.h		\
 	gimpmenufactory.c		\
 	gimpmenufactory.h		\
+	gimpmessagebox.c		\
+	gimpmessagebox.h		\
 	gimpnavigationpreview.c		\
 	gimpnavigationpreview.h		\
 	gimppaletteeditor.c		\
