* app/widgets/gimppreview-popup.c * app/widgets/gimppreview-popup.h: renamed these files...
* app/widgets/gimpview-popup.c
* app/widgets/gimpview-popup.h: .. to these files, and changed the
  GimpPreviewPopup type to GimpViewPopup.

* app/widgets/gimppreviewrenderer.c
* app/widgets/gimppreviewrenderer.h: renamed these files...

* app/widgets/gimpviewrenderer.c
* app/widgets/gimpviewrenderer.h: .. to these files, and changed
  GimpPreviewRenderer to GimpViewRenderer.

This is the second step of the great Preview->View renaming process.

* app/display/gimpdisplayshell-layer-select.c
* app/display/gimpnavigationeditor.c

* app/widgets/Makefile.am
* app/widgets/gimpbrushfactoryview.c
* app/widgets/gimpbufferview.c
* app/widgets/gimpcellrendererviewable.c
* app/widgets/gimpcellrendererviewable.h
* app/widgets/gimpcomponenteditor.c
* app/widgets/gimpcontainerbox.c
* app/widgets/gimpcontainercombobox.c
* app/widgets/gimpcontainereditor.c
* app/widgets/gimpcontainerentry.c
* app/widgets/gimpcontainergridview.c
* app/widgets/gimpcontainerpopup.c
* app/widgets/gimpcontainertreeview-dnd.c
* app/widgets/gimpcontainertreeview.c
* app/widgets/gimpcontainerview.c
* app/widgets/gimpdatafactoryview.c
* app/widgets/gimpitemtreeview.c
* app/widgets/gimplayertreeview.c
* app/widgets/gimpnavigationpreview.c
* app/widgets/gimppatternfactoryview.c
* app/widgets/gimppreviewrenderer-utils.c
* app/widgets/gimppreviewrendererbrush.c
* app/widgets/gimppreviewrendererbrush.h
* app/widgets/gimppreviewrendererdrawable.c
* app/widgets/gimppreviewrendererdrawable.h
* app/widgets/gimppreviewrenderergradient.c
* app/widgets/gimppreviewrenderergradient.h
* app/widgets/gimppreviewrendererimage.c
* app/widgets/gimppreviewrendererimage.h
* app/widgets/gimppreviewrendererimagefile.c
* app/widgets/gimppreviewrendererimagefile.h
* app/widgets/gimppreviewrendererlayer.c
* app/widgets/gimppreviewrenderervectors.c
* app/widgets/gimpselectioneditor.c
* app/widgets/gimptemplateview.c
* app/widgets/gimptooloption

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -188,10 +188,6 @@ libappwidgets_a_sources = \
 	gimppdbdialog.h			\
 	gimppluginaction.c		\
 	gimppluginaction.h		\
-	gimppreview-popup.c		\
-	gimppreview-popup.h		\
-	gimppreviewrenderer.c		\
-	gimppreviewrenderer.h		\
 	gimppreviewrenderer-utils.c	\
 	gimppreviewrenderer-utils.h	\
 	gimppreviewrendererbrush.c	\
@@ -260,10 +256,14 @@ libappwidgets_a_sources = \
 	gimpvectorstreeview.h		\
 	gimpview.c			\
 	gimpview.h			\
+	gimpview-popup.c		\
+	gimpview-popup.h		\
 	gimpviewablebutton.c		\
 	gimpviewablebutton.h		\
 	gimpviewabledialog.c		\
 	gimpviewabledialog.h		\
+	gimpviewrenderer.c		\
+	gimpviewrenderer.h		\
 	gimpwidgets-constructors.c	\
 	gimpwidgets-constructors.h	\
 	gimpwidgets-utils.c		\
